--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "connected-react-router": "^6.4.0",
+    "grommet": "^2.7.0",
     "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -19,11 +20,37 @@
     "shards-react": "^1.0.3",
     "styled-components": "^4.2.0"
   },
+  "lint-staged": {
+    "*.js": [
+      "eslint"
+    ],
+    "*.{js,css}": [
+      "prettier-eslint --list-different"
+    ]
+  },
+  "devDependencies": {
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-flowtype": "^2.39.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.4.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.2.3",
+    "prettier-eslint": "^8.2.0",
+    "prettier-eslint-cli": "^4.4.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "lint-staged",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
