--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -18,6 +18,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "shards-react": "^1.0.3",
+    "sockjs-client": "^1.3.0",
+    "stompjs": "^2.3.3",
     "storm-react-diagrams": "^5.2.1",
     "styled-components": "^4.2.0"
   },
