--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -6,6 +6,7 @@
     "connected-react-router": "^6.4.0",
     "grommet": "^2.7.0",
     "history": "^4.9.0",
+    "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons-kit": "^1.3.1",
